[workspace]
members = [
  "crack-cli",
  "crack-core",
  "crack-osint",
  "crack-gpt",
  "crack-bf",
  "crack-voting",
  "crack-testing",
  "crack-types",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Cycle Five <cycle.five@proton.me>"]

[workspace.dependencies.typesize]
version = "0.1.6"
features = [
  "dervice",
  "details",
  "chrono",
  "url",
  "time",
  "serde_json",
  "secrecy",
  "parking_lot",
  "nonmax",
  "extract_map_01",
]

[workspace.dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
  "runtime-tokio",
  "tls-rustls",
  "macros",
  "postgres",
  "chrono",
  "migrate",
  "json",
]

[workspace.dependencies.serenity]
# Broken? try self-host.
# version = "0.12.3"
git = "https://github.com/CycleFive/serenity"
branch = "next"
default-features = false
# features = ["full", "temp_cache", "typesize", "unstable", "chrono"]
features = [
  "full",
  # "typesize",
  "builder",
  "cache",
  "temp_cache",
  "collector",
  "framework",
  "http",
  "gateway",
  "model",
  "voice_model",
  "utils",
  "rustls_backend",
  "voice",
  "chrono",
  "unstable",
]

[workspace.dependencies.songbird]
# Broken? try self-hosted?
git = "https://github.com/CycleFive/songbird"
branch = "serenity-next"
version = "0.4.5"
features = [
  "driver",
  "gateway",
  "serenity",
  "rustls",
  "receive",
  "builtin-queue",
]

[workspace.dependencies.symphonia]
version = "0.5.4"
features = ["all-formats", "all-codecs", "opt-simd"]

[workspace.dependencies.symphonia-metadata]
version = "0.5.4"

[workspace.dependencies.tokio]
version = "1.34.0"
features = ["full"]

[workspace.dependencies]
# crack-voting = { path = "./crack-voting", optional = true, default-features = true, version = "0.1" }
# crack-core = { path = "./crack-core", default-features = true, version = "0.3" }
# crack-osint = { path = "./crack-osint", default-features = true, version = "0.1" }
# crack-gpt = { path = "../crack-gpt", default-features = true, version = "0.2" }
# crack-bf = { path = "../crack-bf", default-features = true, version = "0.1" }
# poise = { branch = "current", git = "https://github.com/cycle-five/poise", default-features = true }
poise = { branch = "serenity-next", git = "https://github.com/CycleFive/poise", default-features = true, features = [
  "cache",
  "collector",
] }
tracing = "0.1.40"
reqwest = { version = "0.12.9", default-features = false, features = [
  "blocking",
  "json",
  "multipart",
  "rustls-tls",
  "cookies",
  "charset",
  "http2",
  "macos-system-configuration",
] }

[patch.crates-io.serenity-voice-model]
git = "https://github.com/CycleFive/serenity"
branch = "next"

[profile.release]
incremental = true
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = 0

[profile.release-with-debug]
inherits = "release"
debug = 1

[profile.release-with-performance]
inherits = "release"
lto = true
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release-with-performance"
lto = "thin"

[patch.crates-io]
backoff = { git = "https://github.com/CycleFive/backoff", branch = "v0.4.1-alpha.1" }
async-openai = { git = "https://github.com/cycle-five/async-openai", branch = "main" }
rusty_ytdl = { git = "https://github.com/cycle-five/rusty_ytdl", branch = "main" }
poise = { git = "https://github.com/CycleFive/poise", branch = "serenity-next" }
serenity = { git = "https://github.com/CycleFive/serenity", branch = "next" }
