[workspace]
members = [
  "crack-cli",
  "crack-core",
  "crack-osint",
  "crack-gpt",
  "crack-bf",
  "crack-voting",
  "crack-testing",
  "crack-types",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Cycle Five <cycle.five@proton.me>"]

[workspace.dependencies.dashmap]
version = "6"
features = ["serde", "typesize", "raw-api"]

[workspace.dependencies.typesize]
version = "0.1.11"
# branch = "next"
# git = "https://github.com/GnomedDev/typesize"
features = [
  "derive",
  "details",
  "chrono",
  "url",
  "serde_json",
  "secrecy",
  "parking_lot",
  "nonmax",
  "extract_map_01",
  "bool_to_bitflags",
  "mini_moka",
  "dashmap",
]

[workspace.dependencies.typesize-derive]
features = ["derive"]
version = "0.1.11"


[workspace.dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
  "runtime-tokio",
  "tls-rustls",
  "macros",
  "postgres",
  "chrono",
  "migrate",
  "json",
]

[workspace.dependencies.serenity]
# Broken? try self-host.
# version = "0.12.3"
git = "https://github.com/CycleFive/serenity"
branch = "next"
version = "0.12.4"
default-features = false
# features = ["full", "temp_cache", "typesize", "unstable", "chrono"]
features = [
  "full",
  "typesize",
  "builder",
  #"temp_cache",
  "cache",
  "collector",
  "framework",
  "http",
  "gateway",
  "model",
  "voice_model",
  "utils",
  "rustls_backend",
  "voice",
  "chrono",
  "unstable",
  "interactions_endpoint",
  "tokio_task_builder",
]

[workspace.dependencies.songbird]
# Broken? try self-hosted?
git = "https://github.com/CycleFive/songbird"
# git = "https://github.com/serenity-rs/songbird"
branch = "serenity-next"
version = "0.4.5"
features = [
  "driver",
  "gateway",
  "serenity",
  "rustls",
  "receive",
  "builtin-queue",
]

[workspace.dependencies.symphonia]
version = "0.5.4"
features = ["all-formats", "all-codecs", "opt-simd"]

[workspace.dependencies.symphonia-metadata]
version = "0.5.4"

[workspace.dependencies.tokio]
version = "1.42.0"
features = ["full"]

[workspace.dependencies]
small-fixed-array = "0.4.7"
# crack-voting = { path = "./crack-voting", optional = true, default-features = true, version = "0.1" }
# crack-core = { path = "./crack-core", default-features = true, version = "0.3" }
# crack-osint = { path = "./crack-osint", default-features = true, version = "0.1" }
# crack-gpt = { path = "../crack-gpt", default-features = true, version = "0.2" }
# crack-bf = { path = "../crack-bf", default-features = true, version = "0.1" }
poise = { branch = "serenity-next", git = "https://github.com/CycleFive/poise", version = "0.6.1", default-features = true, features = [
  "cache",
  "collector",
] }
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "multipart",
  "rustls-tls",
  "cookies",
  "charset",
  "http2",
  "macos-system-configuration",
] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tracing = "0.1"


[profile.release]
incremental = true
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = 0

[profile.release-with-debug]
inherits = "release"
debug = 1

[profile.release-with-performance]
inherits = "release"
lto = true
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release-with-performance"
lto = "thin"

[patch.crates-io]
backoff = { git = "https://github.com/CycleFive/backoff", branch = "v0.4.1-alpha.1" }
async-openai = { git = "https://github.com/cycle-five/async-openai", branch = "main" }
rusty_ytdl = { git = "https://github.com/cycle-five/rusty_ytdl", branch = "main" }
# poise = { git = "https://github.com/CycleFive/poise", branch = "serenity-next" }
# serenity = { git = "https://github.com/CycleFive/serenity", branch = "next" }
whois-rs = { git = "https://github.com/cycle-five/whois-rs", branch = "master", version = "1.6.1" }

# serenity-voice-model = { git = "https://github.com/CycleFive/serenity", branch = "next" }
# branch = "serenity-next"
