[package]
name = "crack-bf"
version = "0.1.0"
edition = "2021"
authors = ["Cycle Five <cycle.five@proton.me>"]
publish = true
license = "MIT"
description = "Brainfuck interpreter for cracktunes."
keywords = [
    "music",
    "discord",
    "bot",
    "crack",
    "tunes",
    "brainfuck",
    "programming language",
]
categories = ["multimedia::audio"]
homepage = "https://cracktun.es/"
repository = "https://git.sr.ht/~cycle-five/cracktunes"


[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
