[package]
authors = ["Cycle Five <cycle.five@proton.me>"]
name = "cracktunes"
version = "0.3.16-alpha.3"
description = "Cracktunes is a hassle-free, highly performant, host-it-yourself, cracking smoking, discord-music-bot."
publish = true
edition = "2021"
license = "MIT"
keywords = ["music", "discord", "bot", "crack", "tunes", "cracktunes"]
categories = ["multimedia::audio"]
homepage = "https://cracktun.es/"
# The official main repo is sr.ht, this is needed for the CI/CD pipeline.
# repository = "https://git.sr.ht/~cycle-five/cracktunes"
repository = "https://github.com/cycle-five/cracktunes"
build = "build.rs"
workspace = "../"

[package.metadata.wix]
upgrade-guid = "902F8F40-A9A8-4DEE-96C0-A6274889F356"
path-guid = "9E215C2B-01F0-419D-BA4F-0E8C9FAC57AB"
license = true
eula = false

[features]
default = ["crack-tracing"]

crack-tracing = ["tracing", "tracing-subscriber"]
crack-metrics = []
crack-telemetry = []

[dependencies]
crack-core = { path = "../crack-core/" }
crack-types = { path = "../crack-types/" }

config-file = { version = "0.2", features = ["json"] }
dotenvy = "0.15"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
], optional = true }

# Core's dependencies
poise = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }


# # Is this even needed? What did I add it for?
# This is needed for the tests to run in the IDE
[dev-dependencies]
sqlx = { workspace = true }

[build-dependencies]
# All features enabled
vergen-gitcl = { version = "1.0.1", features = ["build"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
