[package]
name = "crack-core"
version = "0.3.11"
authors = ["Cycle Five <cycle.five@proton.me>"]
edition = "2021"
description = "Core module for the cracking smoking, discord-music-bot Cracktunes."
publish = true
license = "MIT"
keywords = ["music", "discord", "bot", "crack", "tunes", "cracktunes"]
categories = ["multimedia::audio"]
homepage = "https://cracktun.es/"
# The official main repo is sr.ht, this is needed for the CI/CD pipeline.
#repository = "https://git.sr.ht/~cycle-five/cracktunes"
repository = "https://github.com/cycle-five/cracktunes"
workspace = "../"

[features]
default = ["cache", "playlist", "ignore-presence-log"]
playlist = []
shuttle = []
ignore-presence-log = []
cache = ["serenity/cache", "poise/cache"]
crack-metrics = ["prometheus"]
crack-gpt = ["dep:crack-gpt"]
crack-osint = ["dep:crack-osint"]
crack-bf = ["dep:crack-bf"]

[dependencies]
rustls = "0.23"
audiopus = "0.3.0-rc.0"
async-trait = "0.1"
anyhow = "1.0"
bytes = "1.7"
colored = "2.1"
const-random = "0.1"
lazy_static = "1.5"
rand = "0.8"
regex = "1.10"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
# serde_with = "3.8"
url = "2.5"
sys-info = "0.9"
prometheus = { version = "0.13", features = ["process"], optional = true }
typemap_rev = "0.3"
either = "1.12"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
strsim = "0.11"
itertools = "0.13"
dashmap = "6.0"
indexmap = "2.2"
futures = "0.3"

crack-gpt = { path = "../crack-gpt", optional = true }
crack-osint = { path = "../crack-osint", optional = true }
crack-bf = { path = "../crack-bf", optional = true }

reqwest = { workspace = true }
reqwest_old = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
serenity = { workspace = true }
songbird = { workspace = true }
tokio = { workspace = true }
poise = { workspace = true }
symphonia = { workspace = true }

[dependencies.rusty_ytdl]
version = "0.7.4"
default-features = false
features = ["live", "rustls-tls", "search", "blocking", "ffmpeg"]

[dependencies.lyric_finder]
git = "https://github.com/cycle-five/spotify-player"
branch = "master"
features = ["rustls-tls"]
version = "0.1.7"

[dependencies.serenity-voice-model]
version = "0.2"

[dependencies.rspotify]
version = "0.13"
default-features = false
features = ["client-reqwest", "reqwest-rustls-tls"]

# [dependencies.ffprobe]
# git = "https://github.com/cycle-five/ffprobe-rs"
# features = ["async-tokio"]
# version = "0.4.0"

# [workspace.metadata.dist]
# dist = false

[dev-dependencies]
ctor = "0.2"
tungstenite = "0.23"
async-tungstenite = "0.27.0"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "chrono",
    "time",
    "migrate",
    "json",
] }

[build-dependencies]
vergen-git2 = { version = "1.0.0", features = [
    "build",
    "cargo",
    "rustc",
    "si",
] }
