[package]
name = "crack-core"
version = "0.3.11"
authors = ["Cycle Five <cycle.five@proton.me>"]
edition = "2021"
description = "Core module for the cracking smoking, discord-music-bot Cracktunes."
publish = true
license = "MIT"
keywords = ["music", "discord", "bot", "crack", "tunes", "cracktunes"]
categories = ["multimedia::audio"]
homepage = "https://cracktun.es/"
# The official main repo is sr.ht, this is needed for the CI/CD pipeline.
#repository = "https://git.sr.ht/~cycle-five/cracktunes"
repository = "https://github.com/cycle-five/cracktunes"
workspace = "../"

[features]
default = [
    "crack-playlist",
    "crack-music",
    "crack-tracing",
    "ignore-presence-log",
    "cache",
]
cache = ["serenity/cache", "poise/cache"]
crack-activity = []
crack-bf = ["dep:crack-bf"]
crack-gpt = ["dep:crack-gpt"]
crack-metrics = ["prometheus"]
crack-music = []
crack-osint = ["dep:crack-osint"]
crack-playlist = []
crack-tracing = []
crack-voting = ["dep:crack-voting"]
ignore-presence-log = []

[dependencies]
cfg-if = "1"
dashmap = "6"
rustls = "0.23"
audiopus = "0.3.0-rc.0"
async-trait = "0.1"
anyhow = "1.0"
bytes = "1.7"
colored = "2.1"
const-random = "0.1"
lazy_static = "1.5"
rand = "0.8"
regex = "1.10"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
# serde_with = "3.8"
url = "2.5"
sys-info = "0.9"
prometheus = { version = "0.13", features = ["process"], optional = true }
typemap_rev = "0.3"
either = "1.12"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
strsim = "0.11"
itertools = "0.13"
indexmap = "2.2"
futures = "0.3"

crack-gpt = { path = "../crack-gpt", optional = true }
crack-osint = { path = "../crack-osint", optional = true }
crack-bf = { path = "../crack-bf", optional = true }
crack-voting = { path = "../crack-voting", optional = true }

reqwest = { workspace = true }
reqwest_old = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
serenity = { workspace = true }
songbird = { workspace = true }
tokio = { workspace = true }
poise = { workspace = true }
symphonia = { workspace = true }

[dependencies.rusty_ytdl]
version = "0.7.4"
default-features = false
features = ["live", "rustls-tls", "search", "blocking", "ffmpeg"]

[dependencies.lyric_finder]
git = "https://github.com/cycle-five/spotify-player"
branch = "master"
features = ["rustls-tls"]
version = "0.1.7"

[dependencies.serenity-voice-model]
version = "0.2"

[dependencies.rspotify]
version = "0.13"
default-features = false
features = ["client-reqwest", "reqwest-rustls-tls"]

[dev-dependencies]
ctor = "0.2"
tungstenite = "0.23"
async-tungstenite = "0.27.0"
sqlx = { version = "0.8.1", features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "chrono",
    "migrate",
    "json",
] }

[build-dependencies]
vergen-gitcl = { version = "1.0.0", features = ["build"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
