[package]
name = "crack-core"
version = "0.3.16-alpha.3"
authors = ["Cycle Five <cycle.five@proton.me>"]
edition = "2021"
description = "Core module for the cracking smoking, discord-music-bot Cracktunes."
publish = true
license = "MIT"
keywords = ["music", "discord", "bot", "crack", "tunes", "cracktunes"]
categories = ["multimedia::audio"]
homepage = "https://cracktun.es/"
# The official main repo is sr.ht, this is needed for the CI/CD pipeline.
#repository = "https://git.sr.ht/~cycle-five/cracktunes"
repository = "https://github.com/cycle-five/cracktunes"
workspace = "../"

[features]
default = [
  "crack-playlist",
  "crack-music",
  "crack-tracing",
  "crack-testing",
  "crack-types",
  "ignore-presence-log",
  "cache",
]
cache = ["serenity/cache", "poise/cache"]
crack-activity = []
crack-bf = ["dep:crack-bf"]
crack-gpt = ["dep:crack-gpt"]
crack-metrics = []
crack-telemetry = []
crack-music = []
crack-osint = ["dep:crack-osint"]
crack-playlist = []
crack-tracing = []
crack-voting = ["dep:crack-voting"]
crack-testing = ["dep:crack-testing"]
crack-types = ["dep:crack-types"]
ignore-presence-log = []

[dependencies]
cfg-if = "1"
dashmap = "6"
rustls = "0.23"
audiopus = "0.3.0-rc.0"
async-trait = "0.1"
anyhow = "1.0"
bytes = "1.7"
colored = "2.1"
const-random = "0.1"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.5"
rand = "0.8"
regex = "1.11"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_derive = "1.0"
serde_json = "1.0"
url = "2.5"
sys-info = "0.9"
prometheus = { version = "0.13", features = ["process"], optional = true }
typemap_rev = "0.3"
either = "1.13"
once_cell = "1.20"
strsim = "0.11"
itertools = "0.13"
indexmap = "2.2"
futures = "0.3"
urlencoding = "2.1"
extract_map = "0.1"

crack-gpt = { path = "../crack-gpt", optional = true }
crack-osint = { path = "../crack-osint", optional = true }
crack-bf = { path = "../crack-bf", optional = true }
crack-voting = { path = "../crack-voting", optional = true }
crack-testing = { path = "../crack-testing", optional = true }
crack-types = { path = "../crack-types", optional = true }

reqwest = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
serenity = { workspace = true }
songbird = { workspace = true }
tokio = { workspace = true }
poise = { workspace = true }
symphonia = { workspace = true }

[dependencies.rusty_ytdl]
version = "0.7.4"
default-features = false
features = ["live", "rustls-tls", "search", "blocking", "ffmpeg"]

[dependencies.lyric_finder]
# git = "https://github.com/cycle-five/lyric-finder"
# branch = "master"
features = ["rustls-tls"]
version = "0.2.0"

[dependencies.serenity-voice-model]
version = "0.2"

[dependencies.rspotify]
version = "0.13"
default-features = false
features = ["client-reqwest", "reqwest-rustls-tls"]

[dev-dependencies]
ctor = "0.2"
tungstenite = "0.26.1"
async-tungstenite = "0.28.0"
sqlx = { version = "0.8.2", features = [
  "runtime-tokio",
  "tls-rustls",
  "macros",
  "postgres",
  "chrono",
  "migrate",
  "json",
] }

[build-dependencies]
vergen-gitcl = { version = "1.0.1", features = ["build"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
