[package]
name = "crack-gpt"
version = "0.2.0"
edition = "2021"
authors = ["Cycle Five <cycle.five@proton.me>"]
publish = true
license = "MIT"
description = "GPT module for Cracktunes."
keywords = ["music", "discord", "bot", "crack", "tunes"]
categories = ["multimedia::audio"]
homepage = "https://cracktun.es/"
repository = "https://git.sr.ht/~cycle-five/cracktunes"


[dependencies]
async-openai = "0.21.0"
ctor = "0.2.8"
ttl_cache = "0.5.1"
const_format = "0.2.32"
tracing = { workspace = true }
tokio = { workspace = true }
