[package]
name = "crack-gpt"
version = "0.3.16-alpha.3"
edition = "2021"
authors = ["Cycle Five <cycle.five@proton.me>"]
publish = true
license = "MIT"
description = "GPT module for Cracktunes. v0.2.0."
keywords = ["music", "discord", "bot", "crack", "tunes"]
categories = ["multimedia::audio"]
homepage = "https://cracktun.es/"
# The official main repo is sr.ht, this is needed for the CI/CD pipeline.
#repository = "https://git.sr.ht/~cycle-five/cracktunes"
repository = "https://github.com/cycle-five/cracktunes"
workspace = "../"

[dependencies]
backoff = "0.4.0"
async-openai = "0.27.2"
ttl_cache = "0.5"
const_format = "0.2"
tokio = { workspace = true }

# [patch.crates-io]
# backoff = { git = "https://github.com/CycleFive/backoff", branch = "v0.4.1-alpha.1" }
