[package]
name = "crack-osint"
version = "0.3.16-alpha.3"
edition = "2021"
authors = ["Cycle Five <cycle.five@proton.me>"]
publish = true
license = "MIT"
description = "OSINT module for Cracktunes."
keywords = ["music", "discord", "bot", "crack", "tunes"]
categories = ["multimedia::audio"]
homepage = "https://cracktun.es/"
# The official main repo is sr.ht, this is needed for the CI/CD pipeline.
# repository = "https://git.sr.ht/~cycle-five/cracktunes"
repository = "https://github.com/cycle-five/cracktunes"
workspace = ".."

[dependencies]
whois-rs = "1.6.1"
sha1 = "0.10"
ipinfo = { git = "https://github.com/cycle-five/ipinfo-rs", version = "3.0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crack-types = { path = "../crack-types" }
const_format = "0.2"

tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
poise = { workspace = true }

[features]
default = ["checkpass", "virustotal", "scan", "ipqs", "crack-tracing"]
crack-tracing = []
checkpass = []
virustotal = []
scan = []
ipqs = []
#phone = []
#social = []
#wayback = []
#whois = []
#ip = []
