[package]
name = "crack-osint"
version = "0.3.16-alpha.3"
edition = "2021"
authors = ["Cycle Five <cycle.five@proton.me>"]
publish = true
license = "MIT"
description = "OSINT module for Cracktunes."
keywords = ["music", "discord", "bot", "crack", "tunes"]
categories = ["multimedia::audio"]
homepage = "https://cracktun.es/"
# The official main repo is sr.ht, this is needed for the CI/CD pipeline.
# repository = "https://git.sr.ht/~cycle-five/cracktunes"
repository = "https://github.com/cycle-five/cracktunes"
workspace = ".."

[features]
default = ["checkpass", "virustotal", "scan", "ipqs", "phone", "crack-tracing"]
crack-tracing = ["tracing", "tracing-subscriber"]
checkpass = []
virustotal = []
scan = []
ipqs = []
phone = []
#social = []
#wayback = []
#whois = []
#ip = []

[dependencies]
ipinfo = { git = "https://github.com/cycle-five/ipinfo-rs", version = "3.0.1" }
crack-types = { path = "../crack-types" }

async-trait = "0.1"
const_format = "0.2"
mockall = "0.13"
poise = { workspace = true }
http = "1.2"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = "0.10"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }
tokio = { workspace = true }
whois-rs = "1.6.1"

[dev-dependencies]
mockall = "0.13"
