[package]
authors = ["Cycle Five <cycle.five@proton.me>"]
name = "crack-testing"
version = "0.3.16-alpha.3"
edition = "2021"
publish = true
license = "MIT"
description = "Testing module for Crack Tunes."
keywords = ["music", "discord", "bot", "crack", "tunes"]
categories = ["multimedia::audio"]
homepage = "https://cracktun.es/"
# The official main repo is sr.ht, this is needed for the CI/CD pipeline.
# repository = "https://git.sr.ht/~cycle-five/cracktunes"
repository = "https://github.com/cycle-five/cracktunes"
workspace = ".."

[dependencies]
anyhow = "1.0"
crack-types = { path = "../crack-types" }
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1"
once_cell = "1.20"
futures = "0.3"
rand = "0.8"
reqwest = { version = "0.12.9", default-features = false, features = [
    "blocking",
    "json",
    "multipart",
    "rustls-tls",
    "cookies",
    "charset",
    "http2",
    "macos-system-configuration",
] }
serenity = { workspace = true }
tracing = "0.1.40"
tokio = { workspace = true }
thiserror = "1.0.69"
poise = { branch = "serenity-next", git = "https://github.com/serenity-rs/poise", default-features = true }
url = "2.5"


[dependencies.rusty_ytdl]
version = "0.7.4"
default-features = false
features = ["live", "rustls-tls", "search", "blocking", "ffmpeg"]

[dependencies.rspotify]
version = "0.13"
default-features = false
features = ["client-reqwest", "reqwest-rustls-tls"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
