[package]
authors = ["Cycle Five <cycle.five@proton.me>"]
name = "crack-testing"
version = "0.3.16-alpha.3"
edition = "2021"
publish = true
license = "MIT"
description = "Testing module for Crack Tunes."
keywords = ["music", "discord", "bot", "crack", "tunes"]
categories = ["multimedia::audio"]
homepage = "https://cracktun.es/"
# The official main repo is sr.ht, this is needed for the CI/CD pipeline.
# repository = "https://git.sr.ht/~cycle-five/cracktunes"
repository = "https://github.com/cycle-five/cracktunes"
workspace = ".."


[features]
default = ["crack-tracing"]
crack-tracing = ["tracing", "tracing-subscriber"]

[dependencies]
anyhow = "1.0"
crack-types = { path = "../crack-types" }
crack-osint = { path = "../crack-osint" }
clap = { version = "4.5", features = ["derive"] }
dashmap = { workspace = true }
once_cell = "1.20"
futures = "0.3"
rand = "0.8"
regex = "1.5"
reqwest = { version = "0.12.9", default-features = false, features = [
    "blocking",
    "json",
    "multipart",
    "rustls-tls",
    "cookies",
    "charset",
    "http2",
    "macos-system-configuration",
] }
rusty_ytdl = { version = "0.7.4", default-features = false, features = [
    "live",
    "rustls-tls",
    "search",
    "blocking",
    "ffmpeg",
] }
rspotify = { version = "0.14", default-features = false, features = [
    "client-reqwest",
    "reqwest-rustls-tls",
] }
thiserror = "2.0"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }
url = ">=2.5.4"

poise = { workspace = true }
serenity = { workspace = true }
songbird = { workspace = true }
tokio = { workspace = true }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
