[package]
name = "crack-types"
version = "0.3.16-alpha.3"
edition = "2021"
authors = ["Cycle Five <cycle.five@proton.me>"]
publish = true
license = "MIT"
description = "Common types for Crack Tunes."
keywords = ["music", "discord", "bot", "crack", "tunes", "types"]
categories = [
  "multimedia::audio",
  "multimedia::music",
  "multimedia::discord",
  "multimedia::bot",
]
homepage = "https://cracktun.es/"
# The official main repo is sr.ht, this is needed for the CI/CD pipeline.
#repository = "https://git.sr.ht/~cycle-five/cracktunes"
repository = "https://github.com/cycle-five/cracktunes"
workspace = ".."

[dependencies]
poise = { workspace = true }
songbird = { workspace = true }
serenity = { workspace = true }
tokio = { workspace = true }
typemap_rev = "0.3.0"
reqwest = { version = "0.12.9", default-features = false, features = [
  "blocking",
  "json",
  "multipart",
  "rustls-tls",
  "cookies",
  "charset",
  "http2",
  "macos-system-configuration",
] }
url = "2.5"
thiserror = "2.0.8"
humantime = "2.1"

[dependencies.rspotify]
version = "0.13"
default-features = false
features = ["client-reqwest", "reqwest-rustls-tls"]

[dependencies.rusty_ytdl]
version = "0.7.4"
default-features = false
features = ["live", "rustls-tls", "search", "blocking", "ffmpeg"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
